[tool.poetry]
name = "brewblox-hass"
version = "1.0.0"
description = "Publishing Brewblox sensors to Home Assistant"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.1.2"
cryptography = "40.0.1"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
pytest = "*"
flake8-quotes = "*"
aresponses = "*"

[build-system]
requires = ["poetry>=0.12", "cryptography==40.0.1"]
build-backend = "poetry.masonry.api"
