[tool.poetry]
name = "brewblox-hass"
version = "1.0.0"
description = "Publishing Brewblox sensors to Home Assistant"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
pytest = "*"
flake8-quotes = "*"
aresponses = "*"
invoke = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
