[tool.poetry]
name = "brewblox-hass"
version = "1.0.0"
description = "Publishing Brewblox sensors to Home Assistant"
authors = ["BrewPi <development@brewpi.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
pydantic-settings = "^2.1.0"
fastapi-mqtt = "^2.1.0"
debugpy = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "*"
pytest-mock = "*"
flake8 = "*"
autopep8 = "*"
flake8-quotes = "*"
pytest = "*"
invoke = "*"
flake8-pyproject = "*"
pytest-docker = "*"
pytest-asyncio = "<23"
asgi-lifespan = "*"
pytest-httpx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
    --ignore=app/
    --cov=brewblox_hass
    --cov-branch
    --cov-report=term-missing:skip-covered
    --no-cov-on-fail
    --durations=3
    """

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "except asyncio.CancelledError:",
]

[tool.flake8]
max-line-length = 120
exclude = ".venv"

[tool.autopep8]
max-line-length = 120
